# quota-tracker

./: .eslintrc.cjs  .gitignore  AGENTS.md  CONTRIBUTING.md  PLAN.md  README.md  ROADMAP.md  TODO.md  Taskfile.yml  codex_local_audit.py  copilot_local_audit.py  copilot_recap.md  copilot_report.md  debug_gemini_pty.py  flake.nix  gemini_local_audit.py  get_weekly_quota.py  index.html  install.sh  package-lock.json  package.json  pyproject.toml  task  uninstall.sh
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: q6ljjvh2s77ppa3li2sk426ywhdasd4y-source
.gemini/: settings.json
.github/workflows/: ci.yml  release-binary.yml
analysis/: copilot_occurrences.txt  copilot_possible_headers.txt  copilot_quota_snapshots_block.txt  copilot_thresholds_block.txt  copilot_usage_sources.txt
frontend/: index.html  screenshot.cjs
frontend/src/: App.tsx  index.css  types.ts  utils.ts
frontend/src/components/charts/: ModelBarChart.tsx  QuotaHistoryChart.tsx  StackedTokenChart.tsx  TokenBreakdownPie.tsx  TokenLineChart.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/ui/: MetricCard.tsx  QuotaPanel.tsx  RangePicker.tsx  TokenBreakdown.tsx
frontend/src/contexts/: ProvidersContext.tsx
frontend/src/hooks/: useConfig.ts  useDashboard.ts  useProjectUsage.ts  useVersion.ts
frontend/src/pages/: Overview.tsx  ProviderDetail.tsx  Settings.tsx
nix/: module.nix  package.nix
quota_tracker/: __init__.py  __main__.py  _ui.py  cli.py  config.py  daemon.py  installer.py
quota_tracker/api/: app.py  routes.py  schemas.py
quota_tracker/core/: __init__.py  config.py  constants.py  models.py
quota_tracker/database/: __init__.py  connection.py  migrations.py  repositories.py
quota_tracker/database/migrations/: 001_initial_schema.sql
quota_tracker/db/: __init__.py  queries.py  schema.py
quota_tracker/providers/: __init__.py  base.py  claude_ai.py  codex.py  copilot.py  gemini.py
quota_tracker/utils/: __init__.py  helpers.py  logging.py
src/: main.ts
tests/integration/: test_api_integration.py  test_codex_snapshots.py  test_copilot_snapshots.py  test_daemon_scheduler.py  test_gemini_snapshots.py
tests/snapshots/api/: expected_shapes.json
tests/snapshots/codex/0.1.0/: expected.json
tests/snapshots/codex/0.1.0/input/: logs_2.sqlite  state_5.sqlite
tests/snapshots/codex/0.1.0/input/sessions/: session-1.jsonl
tests/snapshots/copilot/0.1.0/: expected.json
tests/snapshots/copilot/0.1.0/input/session-state/s1/: events.jsonl
tests/snapshots/gemini/0.1.0/: expected.json
tests/snapshots/gemini/0.1.0/input/: projects.json
tests/snapshots/gemini/0.1.0/input/tmp/chats/: session-1.json  session-2.jsonl
tests/unit/: test__ui.py  test_cli_api.py  test_codex_provider.py  test_config.py  test_copilot_provider.py  test_daemon.py  test_database.py  test_db.py  test_gemini_provider.py  test_installer.py  test_logging.py  test_normalization.py  test_provider_claude_ai.py  test_provider_codex.py  test_provider_copilot.py  test_provider_gemini.py  test_providers.py
